@@ -11,6 +11,7 @@ Release 0.20.3 - Unreleased
                C++ implementation when size % 4 >= 2 (Olivier Gillet via Stack)
    HBASE-1994  Master will lose hlog entries while splitting if region has
                empty oldlogfile.log (Lars George via Stack)
+   HBASE-2022  NPE in housekeeping kills RS
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
@@ -26,8 +27,8 @@ Release 0.20.3 - Unreleased
    HBASE-2011  Add zktop like output to HBase's master UI (Lars George via
                Andrew Purtell)
    HBASE-2018  Updates to .META. blocked under high MemStore load
-   HBASE-2029 Reduce shell exception dump on console
-              (Lars George and J-D via Stack)
+   HBASE-2029  Reduce shell exception dump on console
+               (Lars George and J-D via Stack)
 
 Release 0.20.2 - November 18th, 2009
   INCOMPATIBLE CHANGES
